--- a/chemoMedicationManager/styles.css
+++ b/chemoMedicationManager/styles.css
@@ -334,6 +334,10 @@ header {
         padding: 0 16px;
     }
 
+    .content {
+        order: -1;
+    }
+
     .sidebar {
         position: relative;
         z-index: 10;
